parser.output
Terminals unused in grammar

   ERROR


State 118 conflicts: 16 shift/reduce


Grammar

    0 $accept: program_start $end

    1 program_start: program

    2 program: extern_define_list

    3 extern_define_list: /* empty */
    4                   | extern_define extern_define_list

    5 extern_define: specifier extern_declare_list ';'
    6              | specifier ';'
    7              | specifier function_declare compound_statement
    8              | specifier function_declare ';'

    9 extern_declare_list: var_declare
   10                    | var_declare ',' extern_declare_list

   11 specifier: type
   12          | struct_specifier

   13 type: KW_INT
   14     | KW_FLOAT
   15     | KW_CHAR

   16 struct_specifier: KW_STRUCT option_tag '{' define_list '}'
   17                 | KW_STRUCT TK_ID

   18 option_tag: /* empty */
   19           | TK_ID

   20 var_declare: TK_ID
   21            | var_declare '[' TK_CINT ']'

   22 function_declare: TK_ID '(' param_list ')'
   23                 | TK_ID '(' ')'

   24 param_list: param_declare ',' param_list
   25           | param_declare

   26 param_declare: specifier var_declare

   27 compound_statement: '{' define_list statement_list '}'

   28 statement_list: /* empty */
   29               | statement statement_list

   30 statement: expression ';'
   31          | compound_statement
   32          | KW_RETURN expression ';'
   33          | KW_IF '(' expression ')' statement
   34          | KW_IF '(' expression ')' statement KW_ELSE statement
   35          | KW_FOR '(' expression ';' expression ';' expression ')' statement
   36          | KW_BREAK ';'
   37          | KW_CONTINUE ';'

   38 define_list: /* empty */
   39            | define define_list

   40 define: specifier declare_list ';'

   41 declare_list: declare
   42             | declare ',' declare_list

   43 declare: var_declare
   44        | var_declare '=' expression

   45 expression: expression '=' expression
   46           | expression TK_AND expression
   47           | expression TK_OR expression
   48           | expression relation_op expression
   49           | expression '+' expression
   50           | expression '-' expression
   51           | expression '*' expression
   52           | expression '/' expression
   53           | expression '%' expression
   54           | '(' expression ')'
   55           | '-' expression
   56           | '!' expression
   57           | TK_ID '(' args ')'
   58           | TK_ID '(' ')'
   59           | expression '[' expression ']'
   60           | expression '.' TK_ID
   61           | TK_ID
   62           | TK_CINT
   63           | TK_CFLOAT
   64           | TK_CCHAR
   65           | TK_CSTR

   66 relation_op: '<'
   67            | '>'
   68            | TK_LEQ
   69            | TK_GEQ
   70            | TK_EQ
   71            | TK_NEQ

   72 args: expression ',' args
   73     | expression


Terminals, with rules where they appear

$end (0) 0
'!' (33) 56
'%' (37) 53
'(' (40) 22 23 33 34 35 54 57 58
')' (41) 22 23 33 34 35 54 57 58
'*' (42) 51
'+' (43) 49
',' (44) 10 24 42 72
'-' (45) 50 55
'.' (46) 60
'/' (47) 52
';' (59) 5 6 8 30 32 35 36 37 40
'<' (60) 66
'=' (61) 44 45
'>' (62) 67
'[' (91) 21 59
']' (93) 21 59
'{' (123) 16 27
'}' (125) 16 27
error (256)
KW_INT (258) 13
KW_FLOAT (259) 14
KW_CHAR (260) 15
KW_STRUCT (261) 16 17
KW_RETURN (262) 32
KW_IF (263) 33 34
KW_ELSE (264) 34
KW_FOR (265) 35
KW_CONTINUE (266) 37
KW_BREAK (267) 36
TK_CINT (268) 21 62
TK_CCHAR (269) 64
TK_CFLOAT (270) 63
TK_CSTR (271) 65
TK_ID (272) 17 19 20 22 23 57 58 60 61
ERROR (273)
LOWER_THAN_ELSE (274)
TK_OR (275) 47
TK_AND (276) 46
TK_NEQ (277) 71
TK_EQ (278) 70
TK_GEQ (279) 69
TK_LEQ (280) 68
UMINUS (281)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
program_start (46)
    on left: 1, on right: 0
program (47)
    on left: 2, on right: 1
extern_define_list (48)
    on left: 3 4, on right: 2 4
extern_define (49)
    on left: 5 6 7 8, on right: 4
extern_declare_list (50)
    on left: 9 10, on right: 5 10
specifier (51)
    on left: 11 12, on right: 5 6 7 8 26 40
type (52)
    on left: 13 14 15, on right: 11
struct_specifier (53)
    on left: 16 17, on right: 12
option_tag (54)
    on left: 18 19, on right: 16
var_declare (55)
    on left: 20 21, on right: 9 10 21 26 43 44
function_declare (56)
    on left: 22 23, on right: 7 8
param_list (57)
    on left: 24 25, on right: 22 24
param_declare (58)
    on left: 26, on right: 24 25
compound_statement (59)
    on left: 27, on right: 7 31
statement_list (60)
    on left: 28 29, on right: 27 29
statement (61)
    on left: 30 31 32 33 34 35 36 37, on right: 29 33 34 35
define_list (62)
    on left: 38 39, on right: 16 27 39
define (63)
    on left: 40, on right: 39
declare_list (64)
    on left: 41 42, on right: 40 42
declare (65)
    on left: 43 44, on right: 41 42
expression (66)
    on left: 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62
    63 64 65, on right: 30 32 33 34 35 44 45 46 47 48 49 50 51 52 53
    54 55 56 59 60 72 73
relation_op (67)
    on left: 66 67 68 69 70 71, on right: 48
args (68)
    on left: 72 73, on right: 57 72


State 0

    0 $accept: . program_start $end

    KW_INT     shift, and go to state 1
    KW_FLOAT   shift, and go to state 2
    KW_CHAR    shift, and go to state 3
    KW_STRUCT  shift, and go to state 4

    $default  reduce using rule 3 (extern_define_list)

    program_start       go to state 5
    program             go to state 6
    extern_define_list  go to state 7
    extern_define       go to state 8
    specifier           go to state 9
    type                go to state 10
    struct_specifier    go to state 11


State 1

   13 type: KW_INT .

    $default  reduce using rule 13 (type)


State 2

   14 type: KW_FLOAT .

    $default  reduce using rule 14 (type)


State 3

   15 type: KW_CHAR .

    $default  reduce using rule 15 (type)


State 4

   16 struct_specifier: KW_STRUCT . option_tag '{' define_list '}'
   17                 | KW_STRUCT . TK_ID

    TK_ID  shift, and go to state 12

    $default  reduce using rule 18 (option_tag)

    option_tag  go to state 13


State 5

    0 $accept: program_start . $end

    $end  shift, and go to state 14


State 6

    1 program_start: program .

    $default  reduce using rule 1 (program_start)


State 7

    2 program: extern_define_list .

    $default  reduce using rule 2 (program)


State 8

    4 extern_define_list: extern_define . extern_define_list

    KW_INT     shift, and go to state 1
    KW_FLOAT   shift, and go to state 2
    KW_CHAR    shift, and go to state 3
    KW_STRUCT  shift, and go to state 4

    $default  reduce using rule 3 (extern_define_list)

    extern_define_list  go to state 15
    extern_define       go to state 8
    specifier           go to state 9
    type                go to state 10
    struct_specifier    go to state 11


State 9

    5 extern_define: specifier . extern_declare_list ';'
    6              | specifier . ';'
    7              | specifier . function_declare compound_statement
    8              | specifier . function_declare ';'

    TK_ID  shift, and go to state 16
    ';'    shift, and go to state 17

    extern_declare_list  go to state 18
    var_declare          go to state 19
    function_declare     go to state 20


State 10

   11 specifier: type .

    $default  reduce using rule 11 (specifier)


State 11

   12 specifier: struct_specifier .

    $default  reduce using rule 12 (specifier)


State 12

   17 struct_specifier: KW_STRUCT TK_ID .
   19 option_tag: TK_ID .

    '{'       reduce using rule 19 (option_tag)
    $default  reduce using rule 17 (struct_specifier)


State 13

   16 struct_specifier: KW_STRUCT option_tag . '{' define_list '}'

    '{'  shift, and go to state 21


State 14

    0 $accept: program_start $end .

    $default  accept


State 15

    4 extern_define_list: extern_define extern_define_list .

    $default  reduce using rule 4 (extern_define_list)


State 16

   20 var_declare: TK_ID .
   22 function_declare: TK_ID . '(' param_list ')'
   23                 | TK_ID . '(' ')'

    '('  shift, and go to state 22

    $default  reduce using rule 20 (var_declare)


State 17

    6 extern_define: specifier ';' .

    $default  reduce using rule 6 (extern_define)


State 18

    5 extern_define: specifier extern_declare_list . ';'

    ';'  shift, and go to state 23


State 19

    9 extern_declare_list: var_declare .
   10                    | var_declare . ',' extern_declare_list
   21 var_declare: var_declare . '[' TK_CINT ']'

    '['  shift, and go to state 24
    ','  shift, and go to state 25

    $default  reduce using rule 9 (extern_declare_list)


State 20

    7 extern_define: specifier function_declare . compound_statement
    8              | specifier function_declare . ';'

    ';'  shift, and go to state 26
    '{'  shift, and go to state 27

    compound_statement  go to state 28


State 21

   16 struct_specifier: KW_STRUCT option_tag '{' . define_list '}'

    KW_INT     shift, and go to state 1
    KW_FLOAT   shift, and go to state 2
    KW_CHAR    shift, and go to state 3
    KW_STRUCT  shift, and go to state 4

    $default  reduce using rule 38 (define_list)

    specifier         go to state 29
    type              go to state 10
    struct_specifier  go to state 11
    define_list       go to state 30
    define            go to state 31


State 22

   22 function_declare: TK_ID '(' . param_list ')'
   23                 | TK_ID '(' . ')'

    KW_INT     shift, and go to state 1
    KW_FLOAT   shift, and go to state 2
    KW_CHAR    shift, and go to state 3
    KW_STRUCT  shift, and go to state 4
    ')'        shift, and go to state 32

    specifier         go to state 33
    type              go to state 10
    struct_specifier  go to state 11
    param_list        go to state 34
    param_declare     go to state 35


State 23

    5 extern_define: specifier extern_declare_list ';' .

    $default  reduce using rule 5 (extern_define)


State 24

   21 var_declare: var_declare '[' . TK_CINT ']'

    TK_CINT  shift, and go to state 36


State 25

   10 extern_declare_list: var_declare ',' . extern_declare_list

    TK_ID  shift, and go to state 37

    extern_declare_list  go to state 38
    var_declare          go to state 19


State 26

    8 extern_define: specifier function_declare ';' .

    $default  reduce using rule 8 (extern_define)


State 27

   27 compound_statement: '{' . define_list statement_list '}'

    KW_INT     shift, and go to state 1
    KW_FLOAT   shift, and go to state 2
    KW_CHAR    shift, and go to state 3
    KW_STRUCT  shift, and go to state 4

    $default  reduce using rule 38 (define_list)

    specifier         go to state 29
    type              go to state 10
    struct_specifier  go to state 11
    define_list       go to state 39
    define            go to state 31


State 28

    7 extern_define: specifier function_declare compound_statement .

    $default  reduce using rule 7 (extern_define)


State 29

   40 define: specifier . declare_list ';'

    TK_ID  shift, and go to state 37

    var_declare   go to state 40
    declare_list  go to state 41
    declare       go to state 42


State 30

   16 struct_specifier: KW_STRUCT option_tag '{' define_list . '}'

    '}'  shift, and go to state 43


State 31

   39 define_list: define . define_list

    KW_INT     shift, and go to state 1
    KW_FLOAT   shift, and go to state 2
    KW_CHAR    shift, and go to state 3
    KW_STRUCT  shift, and go to state 4

    $default  reduce using rule 38 (define_list)

    specifier         go to state 29
    type              go to state 10
    struct_specifier  go to state 11
    define_list       go to state 44
    define            go to state 31


State 32

   23 function_declare: TK_ID '(' ')' .

    $default  reduce using rule 23 (function_declare)


State 33

   26 param_declare: specifier . var_declare

    TK_ID  shift, and go to state 37

    var_declare  go to state 45


State 34

   22 function_declare: TK_ID '(' param_list . ')'

    ')'  shift, and go to state 46


State 35

   24 param_list: param_declare . ',' param_list
   25           | param_declare .

    ','  shift, and go to state 47

    $default  reduce using rule 25 (param_list)


State 36

   21 var_declare: var_declare '[' TK_CINT . ']'

    ']'  shift, and go to state 48


State 37

   20 var_declare: TK_ID .

    $default  reduce using rule 20 (var_declare)


State 38

   10 extern_declare_list: var_declare ',' extern_declare_list .

    $default  reduce using rule 10 (extern_declare_list)


State 39

   27 compound_statement: '{' define_list . statement_list '}'

    KW_RETURN    shift, and go to state 49
    KW_IF        shift, and go to state 50
    KW_FOR       shift, and go to state 51
    KW_CONTINUE  shift, and go to state 52
    KW_BREAK     shift, and go to state 53
    TK_CINT      shift, and go to state 54
    TK_CCHAR     shift, and go to state 55
    TK_CFLOAT    shift, and go to state 56
    TK_CSTR      shift, and go to state 57
    TK_ID        shift, and go to state 58
    '-'          shift, and go to state 59
    '!'          shift, and go to state 60
    '('          shift, and go to state 61
    '{'          shift, and go to state 27

    $default  reduce using rule 28 (statement_list)

    compound_statement  go to state 62
    statement_list      go to state 63
    statement           go to state 64
    expression          go to state 65


State 40

   21 var_declare: var_declare . '[' TK_CINT ']'
   43 declare: var_declare .
   44        | var_declare . '=' expression

    '='  shift, and go to state 66
    '['  shift, and go to state 24

    $default  reduce using rule 43 (declare)


State 41

   40 define: specifier declare_list . ';'

    ';'  shift, and go to state 67


State 42

   41 declare_list: declare .
   42             | declare . ',' declare_list

    ','  shift, and go to state 68

    $default  reduce using rule 41 (declare_list)


State 43

   16 struct_specifier: KW_STRUCT option_tag '{' define_list '}' .

    $default  reduce using rule 16 (struct_specifier)


State 44

   39 define_list: define define_list .

    $default  reduce using rule 39 (define_list)


State 45

   21 var_declare: var_declare . '[' TK_CINT ']'
   26 param_declare: specifier var_declare .

    '['  shift, and go to state 24

    $default  reduce using rule 26 (param_declare)


State 46

   22 function_declare: TK_ID '(' param_list ')' .

    $default  reduce using rule 22 (function_declare)


State 47

   24 param_list: param_declare ',' . param_list

    KW_INT     shift, and go to state 1
    KW_FLOAT   shift, and go to state 2
    KW_CHAR    shift, and go to state 3
    KW_STRUCT  shift, and go to state 4

    specifier         go to state 33
    type              go to state 10
    struct_specifier  go to state 11
    param_list        go to state 69
    param_declare     go to state 35


State 48

   21 var_declare: var_declare '[' TK_CINT ']' .

    $default  reduce using rule 21 (var_declare)


State 49

   32 statement: KW_RETURN . expression ';'

    TK_CINT    shift, and go to state 54
    TK_CCHAR   shift, and go to state 55
    TK_CFLOAT  shift, and go to state 56
    TK_CSTR    shift, and go to state 57
    TK_ID      shift, and go to state 58
    '-'        shift, and go to state 59
    '!'        shift, and go to state 60
    '('        shift, and go to state 61

    expression  go to state 70


State 50

   33 statement: KW_IF . '(' expression ')' statement
   34          | KW_IF . '(' expression ')' statement KW_ELSE statement

    '('  shift, and go to state 71


State 51

   35 statement: KW_FOR . '(' expression ';' expression ';' expression ')' statement

    '('  shift, and go to state 72


State 52

   37 statement: KW_CONTINUE . ';'

    ';'  shift, and go to state 73


State 53

   36 statement: KW_BREAK . ';'

    ';'  shift, and go to state 74


State 54

   62 expression: TK_CINT .

    $default  reduce using rule 62 (expression)


State 55

   64 expression: TK_CCHAR .

    $default  reduce using rule 64 (expression)


State 56

   63 expression: TK_CFLOAT .

    $default  reduce using rule 63 (expression)


State 57

   65 expression: TK_CSTR .

    $default  reduce using rule 65 (expression)


State 58

   57 expression: TK_ID . '(' args ')'
   58           | TK_ID . '(' ')'
   61           | TK_ID .

    '('  shift, and go to state 75

    $default  reduce using rule 61 (expression)


State 59

   55 expression: '-' . expression

    TK_CINT    shift, and go to state 54
    TK_CCHAR   shift, and go to state 55
    TK_CFLOAT  shift, and go to state 56
    TK_CSTR    shift, and go to state 57
    TK_ID      shift, and go to state 58
    '-'        shift, and go to state 59
    '!'        shift, and go to state 60
    '('        shift, and go to state 61

    expression  go to state 76


State 60

   56 expression: '!' . expression

    TK_CINT    shift, and go to state 54
    TK_CCHAR   shift, and go to state 55
    TK_CFLOAT  shift, and go to state 56
    TK_CSTR    shift, and go to state 57
    TK_ID      shift, and go to state 58
    '-'        shift, and go to state 59
    '!'        shift, and go to state 60
    '('        shift, and go to state 61

    expression  go to state 77


State 61

   54 expression: '(' . expression ')'

    TK_CINT    shift, and go to state 54
    TK_CCHAR   shift, and go to state 55
    TK_CFLOAT  shift, and go to state 56
    TK_CSTR    shift, and go to state 57
    TK_ID      shift, and go to state 58
    '-'        shift, and go to state 59
    '!'        shift, and go to state 60
    '('        shift, and go to state 61

    expression  go to state 78


State 62

   31 statement: compound_statement .

    $default  reduce using rule 31 (statement)


State 63

   27 compound_statement: '{' define_list statement_list . '}'

    '}'  shift, and go to state 79


State 64

   29 statement_list: statement . statement_list

    KW_RETURN    shift, and go to state 49
    KW_IF        shift, and go to state 50
    KW_FOR       shift, and go to state 51
    KW_CONTINUE  shift, and go to state 52
    KW_BREAK     shift, and go to state 53
    TK_CINT      shift, and go to state 54
    TK_CCHAR     shift, and go to state 55
    TK_CFLOAT    shift, and go to state 56
    TK_CSTR      shift, and go to state 57
    TK_ID        shift, and go to state 58
    '-'          shift, and go to state 59
    '!'          shift, and go to state 60
    '('          shift, and go to state 61
    '{'          shift, and go to state 27

    $default  reduce using rule 28 (statement_list)

    compound_statement  go to state 62
    statement_list      go to state 80
    statement           go to state 64
    expression          go to state 65


State 65

   30 statement: expression . ';'
   45 expression: expression . '=' expression
   46           | expression . TK_AND expression
   47           | expression . TK_OR expression
   48           | expression . relation_op expression
   49           | expression . '+' expression
   50           | expression . '-' expression
   51           | expression . '*' expression
   52           | expression . '/' expression
   53           | expression . '%' expression
   59           | expression . '[' expression ']'
   60           | expression . '.' TK_ID

    '='     shift, and go to state 81
    TK_OR   shift, and go to state 82
    TK_AND  shift, and go to state 83
    '>'     shift, and go to state 84
    '<'     shift, and go to state 85
    TK_NEQ  shift, and go to state 86
    TK_EQ   shift, and go to state 87
    TK_GEQ  shift, and go to state 88
    TK_LEQ  shift, and go to state 89
    '+'     shift, and go to state 90
    '-'     shift, and go to state 91
    '*'     shift, and go to state 92
    '/'     shift, and go to state 93
    '%'     shift, and go to state 94
    '.'     shift, and go to state 95
    '['     shift, and go to state 96
    ';'     shift, and go to state 97

    relation_op  go to state 98


State 66

   44 declare: var_declare '=' . expression

    TK_CINT    shift, and go to state 54
    TK_CCHAR   shift, and go to state 55
    TK_CFLOAT  shift, and go to state 56
    TK_CSTR    shift, and go to state 57
    TK_ID      shift, and go to state 58
    '-'        shift, and go to state 59
    '!'        shift, and go to state 60
    '('        shift, and go to state 61

    expression  go to state 99


State 67

   40 define: specifier declare_list ';' .

    $default  reduce using rule 40 (define)


State 68

   42 declare_list: declare ',' . declare_list

    TK_ID  shift, and go to state 37

    var_declare   go to state 40
    declare_list  go to state 100
    declare       go to state 42


State 69

   24 param_list: param_declare ',' param_list .

    $default  reduce using rule 24 (param_list)


State 70

   32 statement: KW_RETURN expression . ';'
   45 expression: expression . '=' expression
   46           | expression . TK_AND expression
   47           | expression . TK_OR expression
   48           | expression . relation_op expression
   49           | expression . '+' expression
   50           | expression . '-' expression
   51           | expression . '*' expression
   52           | expression . '/' expression
   53           | expression . '%' expression
   59           | expression . '[' expression ']'
   60           | expression . '.' TK_ID

    '='     shift, and go to state 81
    TK_OR   shift, and go to state 82
    TK_AND  shift, and go to state 83
    '>'     shift, and go to state 84
    '<'     shift, and go to state 85
    TK_NEQ  shift, and go to state 86
    TK_EQ   shift, and go to state 87
    TK_GEQ  shift, and go to state 88
    TK_LEQ  shift, and go to state 89
    '+'     shift, and go to state 90
    '-'     shift, and go to state 91
    '*'     shift, and go to state 92
    '/'     shift, and go to state 93
    '%'     shift, and go to state 94
    '.'     shift, and go to state 95
    '['     shift, and go to state 96
    ';'     shift, and go to state 101

    relation_op  go to state 98


State 71

   33 statement: KW_IF '(' . expression ')' statement
   34          | KW_IF '(' . expression ')' statement KW_ELSE statement

    TK_CINT    shift, and go to state 54
    TK_CCHAR   shift, and go to state 55
    TK_CFLOAT  shift, and go to state 56
    TK_CSTR    shift, and go to state 57
    TK_ID      shift, and go to state 58
    '-'        shift, and go to state 59
    '!'        shift, and go to state 60
    '('        shift, and go to state 61

    expression  go to state 102


State 72

   35 statement: KW_FOR '(' . expression ';' expression ';' expression ')' statement

    TK_CINT    shift, and go to state 54
    TK_CCHAR   shift, and go to state 55
    TK_CFLOAT  shift, and go to state 56
    TK_CSTR    shift, and go to state 57
    TK_ID      shift, and go to state 58
    '-'        shift, and go to state 59
    '!'        shift, and go to state 60
    '('        shift, and go to state 61

    expression  go to state 103


State 73

   37 statement: KW_CONTINUE ';' .

    $default  reduce using rule 37 (statement)


State 74

   36 statement: KW_BREAK ';' .

    $default  reduce using rule 36 (statement)


State 75

   57 expression: TK_ID '(' . args ')'
   58           | TK_ID '(' . ')'

    TK_CINT    shift, and go to state 54
    TK_CCHAR   shift, and go to state 55
    TK_CFLOAT  shift, and go to state 56
    TK_CSTR    shift, and go to state 57
    TK_ID      shift, and go to state 58
    '-'        shift, and go to state 59
    '!'        shift, and go to state 60
    '('        shift, and go to state 61
    ')'        shift, and go to state 104

    expression  go to state 105
    args        go to state 106


State 76

   45 expression: expression . '=' expression
   46           | expression . TK_AND expression
   47           | expression . TK_OR expression
   48           | expression . relation_op expression
   49           | expression . '+' expression
   50           | expression . '-' expression
   51           | expression . '*' expression
   52           | expression . '/' expression
   53           | expression . '%' expression
   55           | '-' expression .
   59           | expression . '[' expression ']'
   60           | expression . '.' TK_ID

    '.'  shift, and go to state 95
    '['  shift, and go to state 96

    $default  reduce using rule 55 (expression)

    relation_op  go to state 98


State 77

   45 expression: expression . '=' expression
   46           | expression . TK_AND expression
   47           | expression . TK_OR expression
   48           | expression . relation_op expression
   49           | expression . '+' expression
   50           | expression . '-' expression
   51           | expression . '*' expression
   52           | expression . '/' expression
   53           | expression . '%' expression
   56           | '!' expression .
   59           | expression . '[' expression ']'
   60           | expression . '.' TK_ID

    '.'  shift, and go to state 95
    '['  shift, and go to state 96

    $default  reduce using rule 56 (expression)

    relation_op  go to state 98


State 78

   45 expression: expression . '=' expression
   46           | expression . TK_AND expression
   47           | expression . TK_OR expression
   48           | expression . relation_op expression
   49           | expression . '+' expression
   50           | expression . '-' expression
   51           | expression . '*' expression
   52           | expression . '/' expression
   53           | expression . '%' expression
   54           | '(' expression . ')'
   59           | expression . '[' expression ']'
   60           | expression . '.' TK_ID

    '='     shift, and go to state 81
    TK_OR   shift, and go to state 82
    TK_AND  shift, and go to state 83
    '>'     shift, and go to state 84
    '<'     shift, and go to state 85
    TK_NEQ  shift, and go to state 86
    TK_EQ   shift, and go to state 87
    TK_GEQ  shift, and go to state 88
    TK_LEQ  shift, and go to state 89
    '+'     shift, and go to state 90
    '-'     shift, and go to state 91
    '*'     shift, and go to state 92
    '/'     shift, and go to state 93
    '%'     shift, and go to state 94
    ')'     shift, and go to state 107
    '.'     shift, and go to state 95
    '['     shift, and go to state 96

    relation_op  go to state 98


State 79

   27 compound_statement: '{' define_list statement_list '}' .

    $default  reduce using rule 27 (compound_statement)


State 80

   29 statement_list: statement statement_list .

    $default  reduce using rule 29 (statement_list)


State 81

   45 expression: expression '=' . expression

    TK_CINT    shift, and go to state 54
    TK_CCHAR   shift, and go to state 55
    TK_CFLOAT  shift, and go to state 56
    TK_CSTR    shift, and go to state 57
    TK_ID      shift, and go to state 58
    '-'        shift, and go to state 59
    '!'        shift, and go to state 60
    '('        shift, and go to state 61

    expression  go to state 108


State 82

   47 expression: expression TK_OR . expression

    TK_CINT    shift, and go to state 54
    TK_CCHAR   shift, and go to state 55
    TK_CFLOAT  shift, and go to state 56
    TK_CSTR    shift, and go to state 57
    TK_ID      shift, and go to state 58
    '-'        shift, and go to state 59
    '!'        shift, and go to state 60
    '('        shift, and go to state 61

    expression  go to state 109


State 83

   46 expression: expression TK_AND . expression

    TK_CINT    shift, and go to state 54
    TK_CCHAR   shift, and go to state 55
    TK_CFLOAT  shift, and go to state 56
    TK_CSTR    shift, and go to state 57
    TK_ID      shift, and go to state 58
    '-'        shift, and go to state 59
    '!'        shift, and go to state 60
    '('        shift, and go to state 61

    expression  go to state 110


State 84

   67 relation_op: '>' .

    $default  reduce using rule 67 (relation_op)


State 85

   66 relation_op: '<' .

    $default  reduce using rule 66 (relation_op)


State 86

   71 relation_op: TK_NEQ .

    $default  reduce using rule 71 (relation_op)


State 87

   70 relation_op: TK_EQ .

    $default  reduce using rule 70 (relation_op)


State 88

   69 relation_op: TK_GEQ .

    $default  reduce using rule 69 (relation_op)


State 89

   68 relation_op: TK_LEQ .

    $default  reduce using rule 68 (relation_op)


State 90

   49 expression: expression '+' . expression

    TK_CINT    shift, and go to state 54
    TK_CCHAR   shift, and go to state 55
    TK_CFLOAT  shift, and go to state 56
    TK_CSTR    shift, and go to state 57
    TK_ID      shift, and go to state 58
    '-'        shift, and go to state 59
    '!'        shift, and go to state 60
    '('        shift, and go to state 61

    expression  go to state 111


State 91

   50 expression: expression '-' . expression

    TK_CINT    shift, and go to state 54
    TK_CCHAR   shift, and go to state 55
    TK_CFLOAT  shift, and go to state 56
    TK_CSTR    shift, and go to state 57
    TK_ID      shift, and go to state 58
    '-'        shift, and go to state 59
    '!'        shift, and go to state 60
    '('        shift, and go to state 61

    expression  go to state 112


State 92

   51 expression: expression '*' . expression

    TK_CINT    shift, and go to state 54
    TK_CCHAR   shift, and go to state 55
    TK_CFLOAT  shift, and go to state 56
    TK_CSTR    shift, and go to state 57
    TK_ID      shift, and go to state 58
    '-'        shift, and go to state 59
    '!'        shift, and go to state 60
    '('        shift, and go to state 61

    expression  go to state 113


State 93

   52 expression: expression '/' . expression

    TK_CINT    shift, and go to state 54
    TK_CCHAR   shift, and go to state 55
    TK_CFLOAT  shift, and go to state 56
    TK_CSTR    shift, and go to state 57
    TK_ID      shift, and go to state 58
    '-'        shift, and go to state 59
    '!'        shift, and go to state 60
    '('        shift, and go to state 61

    expression  go to state 114


State 94

   53 expression: expression '%' . expression

    TK_CINT    shift, and go to state 54
    TK_CCHAR   shift, and go to state 55
    TK_CFLOAT  shift, and go to state 56
    TK_CSTR    shift, and go to state 57
    TK_ID      shift, and go to state 58
    '-'        shift, and go to state 59
    '!'        shift, and go to state 60
    '('        shift, and go to state 61

    expression  go to state 115


State 95

   60 expression: expression '.' . TK_ID

    TK_ID  shift, and go to state 116


State 96

   59 expression: expression '[' . expression ']'

    TK_CINT    shift, and go to state 54
    TK_CCHAR   shift, and go to state 55
    TK_CFLOAT  shift, and go to state 56
    TK_CSTR    shift, and go to state 57
    TK_ID      shift, and go to state 58
    '-'        shift, and go to state 59
    '!'        shift, and go to state 60
    '('        shift, and go to state 61

    expression  go to state 117


State 97

   30 statement: expression ';' .

    $default  reduce using rule 30 (statement)


State 98

   48 expression: expression relation_op . expression

    TK_CINT    shift, and go to state 54
    TK_CCHAR   shift, and go to state 55
    TK_CFLOAT  shift, and go to state 56
    TK_CSTR    shift, and go to state 57
    TK_ID      shift, and go to state 58
    '-'        shift, and go to state 59
    '!'        shift, and go to state 60
    '('        shift, and go to state 61

    expression  go to state 118


State 99

   44 declare: var_declare '=' expression .
   45 expression: expression . '=' expression
   46           | expression . TK_AND expression
   47           | expression . TK_OR expression
   48           | expression . relation_op expression
   49           | expression . '+' expression
   50           | expression . '-' expression
   51           | expression . '*' expression
   52           | expression . '/' expression
   53           | expression . '%' expression
   59           | expression . '[' expression ']'
   60           | expression . '.' TK_ID

    '='     shift, and go to state 81
    TK_OR   shift, and go to state 82
    TK_AND  shift, and go to state 83
    '>'     shift, and go to state 84
    '<'     shift, and go to state 85
    TK_NEQ  shift, and go to state 86
    TK_EQ   shift, and go to state 87
    TK_GEQ  shift, and go to state 88
    TK_LEQ  shift, and go to state 89
    '+'     shift, and go to state 90
    '-'     shift, and go to state 91
    '*'     shift, and go to state 92
    '/'     shift, and go to state 93
    '%'     shift, and go to state 94
    '.'     shift, and go to state 95
    '['     shift, and go to state 96

    $default  reduce using rule 44 (declare)

    relation_op  go to state 98


State 100

   42 declare_list: declare ',' declare_list .

    $default  reduce using rule 42 (declare_list)


State 101

   32 statement: KW_RETURN expression ';' .

    $default  reduce using rule 32 (statement)


State 102

   33 statement: KW_IF '(' expression . ')' statement
   34          | KW_IF '(' expression . ')' statement KW_ELSE statement
   45 expression: expression . '=' expression
   46           | expression . TK_AND expression
   47           | expression . TK_OR expression
   48           | expression . relation_op expression
   49           | expression . '+' expression
   50           | expression . '-' expression
   51           | expression . '*' expression
   52           | expression . '/' expression
   53           | expression . '%' expression
   59           | expression . '[' expression ']'
   60           | expression . '.' TK_ID

    '='     shift, and go to state 81
    TK_OR   shift, and go to state 82
    TK_AND  shift, and go to state 83
    '>'     shift, and go to state 84
    '<'     shift, and go to state 85
    TK_NEQ  shift, and go to state 86
    TK_EQ   shift, and go to state 87
    TK_GEQ  shift, and go to state 88
    TK_LEQ  shift, and go to state 89
    '+'     shift, and go to state 90
    '-'     shift, and go to state 91
    '*'     shift, and go to state 92
    '/'     shift, and go to state 93
    '%'     shift, and go to state 94
    ')'     shift, and go to state 119
    '.'     shift, and go to state 95
    '['     shift, and go to state 96

    relation_op  go to state 98


State 103

   35 statement: KW_FOR '(' expression . ';' expression ';' expression ')' statement
   45 expression: expression . '=' expression
   46           | expression . TK_AND expression
   47           | expression . TK_OR expression
   48           | expression . relation_op expression
   49           | expression . '+' expression
   50           | expression . '-' expression
   51           | expression . '*' expression
   52           | expression . '/' expression
   53           | expression . '%' expression
   59           | expression . '[' expression ']'
   60           | expression . '.' TK_ID

    '='     shift, and go to state 81
    TK_OR   shift, and go to state 82
    TK_AND  shift, and go to state 83
    '>'     shift, and go to state 84
    '<'     shift, and go to state 85
    TK_NEQ  shift, and go to state 86
    TK_EQ   shift, and go to state 87
    TK_GEQ  shift, and go to state 88
    TK_LEQ  shift, and go to state 89
    '+'     shift, and go to state 90
    '-'     shift, and go to state 91
    '*'     shift, and go to state 92
    '/'     shift, and go to state 93
    '%'     shift, and go to state 94
    '.'     shift, and go to state 95
    '['     shift, and go to state 96
    ';'     shift, and go to state 120

    relation_op  go to state 98


State 104

   58 expression: TK_ID '(' ')' .

    $default  reduce using rule 58 (expression)


State 105

   45 expression: expression . '=' expression
   46           | expression . TK_AND expression
   47           | expression . TK_OR expression
   48           | expression . relation_op expression
   49           | expression . '+' expression
   50           | expression . '-' expression
   51           | expression . '*' expression
   52           | expression . '/' expression
   53           | expression . '%' expression
   59           | expression . '[' expression ']'
   60           | expression . '.' TK_ID
   72 args: expression . ',' args
   73     | expression .

    '='     shift, and go to state 81
    TK_OR   shift, and go to state 82
    TK_AND  shift, and go to state 83
    '>'     shift, and go to state 84
    '<'     shift, and go to state 85
    TK_NEQ  shift, and go to state 86
    TK_EQ   shift, and go to state 87
    TK_GEQ  shift, and go to state 88
    TK_LEQ  shift, and go to state 89
    '+'     shift, and go to state 90
    '-'     shift, and go to state 91
    '*'     shift, and go to state 92
    '/'     shift, and go to state 93
    '%'     shift, and go to state 94
    '.'     shift, and go to state 95
    '['     shift, and go to state 96
    ','     shift, and go to state 121

    $default  reduce using rule 73 (args)

    relation_op  go to state 98


State 106

   57 expression: TK_ID '(' args . ')'

    ')'  shift, and go to state 122


State 107

   54 expression: '(' expression ')' .

    $default  reduce using rule 54 (expression)


State 108
